# LibShell

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
.agents/: AGENTS.md
.agents/docs/: posix-shell-std.txt
bindings/: XFeats.yaml  generate-bindings.pl  libshell.i
cli/: CMakeLists.txt  Shell.syntax  libsh-cli.cpp  libsh-parse.cpp
cmake/: libshell.pc.in
docs/: CMakeLists.txt  Doxyfile.in  frontpage.md
docs/design/: architecture.md  dsl.md  kernels.md  puppeteer.md  sinklets.md  xi.md
docs/manual/: 01-architecture.md  02-installation.md  03-build-integration.md  04-typed-commands.md  05-arguments-expansion.md  06-environment.md  07-redirection-stdio.md  08-pipelines.md  09-sequencing-subshells.md  10-execution-reports.md  11-posix-executor.md  12-dry-run-validation.md  13-sinklets.md  14-kernels.md  15-standard-kernels.md  16-parser-cli.md  17-configuration-policy.md  18-testing-debugging.md  19-packaging-installation.md  20-extension-roadmap.md  stdkern.md
examples/: CMakeLists.txt
examples/API/: 01_dry_run_plan.cpp  02_echo_capture.cpp  03_variable_expansion.cpp  04_environment_overlay.cpp  05_export_and_child_env.cpp  06_command_working_directory.cpp  07_stdout_to_file.cpp  08_append_to_file.cpp  09_stderr_capture.cpp  10_discard_stderr.cpp  11_pipeline_count_lines.cpp  12_pipefail_any_failed.cpp  13_and_if_short_circuit.cpp  14_or_if_recovery.cpp  15_subshell_copy_isolation.cpp  16_subshell_shared_environment.cpp  17_arithmetic_expansion.cpp  18_command_substitution.cpp  19_command_substitution_parser.cpp  20_glob_expansion.cpp  21_validation_diagnostics.cpp  22_lambda_sinklet.cpp  23_grep_sinklet.cpp  24_json_lines_sinklet.cpp  25_function_kernel.cpp  CMakeLists.txt  README.md  common.hpp
examples/CLI/: 01_health_check.sh  02_report_timestamp.sh  03_export_child_env.sh  04_write_manifest.sh  05_append_audit_log.sh  06_capture_stderr.sh  07_count_status_lines.sh  08_short_circuit_recovery.sh  09_glob_latest_logs.sh  10_working_directory.sh
include/: Lakposht-Kernel.hpp  Lakposht.hpp  LibShell-Kernel.hpp  LibShell-Posix.hpp  LibShell.hpp
manifests/: libsh-api.yaml  libsh-cli-args.yaml
stdkern/: CMakeLists.txt  README.md  StdKern.hpp
tests/: CMakeLists.txt  test_cli.cpp  test_runtime.cpp
